[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build

[ah_bootstrap]
auto_use = True

[metadata]
package_name = dust_emissivity
description = Dust Emissivity Toolkit
long_description = Toolkit for dust emissivity
author = Adam Ginsburg
author_email = adam.g.ginsburg@gmail.com
license = BSD
url = http://github.com/keflavich/dust_emissivity/
edit_on_github = True
github_project = keflavich/dust_emissivity
