[metadata]
package_name = dust_emissivity
description = Dust Emissivity Toolkit
long_description = Toolkit for dust emissivity
author = Adam Ginsburg
author_email = adam.g.ginsburg@gmail.com
license = BSD
url = http://github.com/keflavich/dust_emissivity/
edit_on_github = False
github_project = keflavich/dust_emissivity
version = 0.1

[options]
zip_safe = False
packages = find:
install_requires =
    astropy
    numpy>=1.8.0
    packaging
    tqdm

[options.extras_require]
test =
    pytest-astropy
    pytest-cov
    regions>=0.7
    numpy>=1.24.0
    astropy>=5.2.1

[options.package_data]
dust_emissivity.tests =
    data/*
    data/*/*

dust_emissivity.io.tests = data/*/*

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings


[coverage:run]
omit =
  dust-emissivity/__init__*
  dust-emissivity/conftest.py
  dust-emissivity/*setup*
  dust-emissivity/*/tests/*
  dust-emissivity/tests/test_*
  dust-emissivity/extern/*
  dust-emissivity/utils/compat/*
  dust-emissivity/version*
  dust-emissivity/wcs/docstrings*
  dust-emissivity/_erfa/*
  */dust-emissivity/__init__*
  */dust-emissivity/conftest.py
  */dust-emissivity/*setup*
  */dust-emissivity/*/tests/*
  */dust-emissivity/tests/test_*
  */dust-emissivity/extern/*
  */dust-emissivity/utils/compat/*
  */dust-emissivity/version*
  */dust-emissivity/wcs/docstrings*
  */dust-emissivity/_erfa/*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
